# migration-factory

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  HOW_IT_WORKS.md  LICENSE  README.md  VSCODE_SETUP.md  alembic.ini  coverage.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 64675e4a64da_initial_migration.py
docs/: API_REFERENCE.md  CONFIGURATION_REFERENCE.md  DEVELOPER_GUIDE.md  MIGRATION_RUNBOOK.md  PLUGIN_DEVELOPMENT_GUIDE.md  ROLLBACK_GUIDE.md  USER_GUIDE.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js
frontend/src/components/: HistoryPage.jsx  ResultsDashboard.jsx  UploadForm.jsx
src/migration_factory/: __init__.py  cli.py  pipeline.py
src/migration_factory/ai/: __init__.py  chat.py  engine.py  rca.py
src/migration_factory/api/: __init__.py  database.py  main.py
src/migration_factory/assessment/: __init__.py  engine.py  extended.py  models.py
src/migration_factory/compliance/: __init__.py  engine.py
src/migration_factory/core/: __init__.py  config.py  container.py  exceptions.py  logging.py  plugin_manager.py
src/migration_factory/dependency/: __init__.py  app_graph.py  runtime_graph.py
src/migration_factory/deployment/: cloud_ops.py  engine.py
src/migration_factory/discovery/: __init__.py  aws_live.py  azure_live.py  engine.py  gcp_live.py
src/migration_factory/discovery/providers/: cloud.py
src/migration_factory/domain/: __init__.py  canonical_model.py  enums.py
src/migration_factory/drift/: engine.py
src/migration_factory/events/: __init__.py  engine.py
src/migration_factory/finops/: __init__.py  engine.py  extended.py
src/migration_factory/health/: __init__.py
src/migration_factory/knowledge_graph/: __init__.py  engine.py
src/migration_factory/mappers/: __init__.py  aws_to_canonical.py  base.py  gcp_to_canonical.py  registry.py
src/migration_factory/metrics/: collector.py
src/migration_factory/parsers/: __init__.py  azure_cmdb.py  base.py  column_detection.py  extended.py  multi_format.py  registry.py  terraform_state.py
src/migration_factory/planner/: __init__.py  engine.py
src/migration_factory/platform/: __init__.py  multi_tenant.py
src/migration_factory/policy/: __init__.py  compliance_packs.py  engine.py  models.py
src/migration_factory/reporting/: __init__.py  engine.py  pdf_native.py  renderers.py
src/migration_factory/rollback/: __init__.py  engine.py
src/migration_factory/security/: __init__.py  engine.py
src/migration_factory/terraform_gen/: __init__.py  engine.py  extended.py
src/migration_factory/translation/: __init__.py  engine.py  matrix.py  models.py
src/migration_factory/translation/data/: aws_to_gcp.json  gcp_to_aws.json
src/migration_factory/validation/: __init__.py  engine.py
src/migration_factory/workflow/: engine.py
tests/: conftest.py
tests/fixtures/: aws_cli_combined.json  aws_cli_instances.json  aws_cli_query_output.json  complex_terraform.tfstate  inventory_aws_export.csv  inventory_flexible.csv  sample_gcp.tfstate  sample_terraform.tfstate
tests/integration/: test_full_vertical.py  test_ingestion_pipeline.py
tests/unit/: test_all_engines.py  test_api.py  test_assessment.py  test_aws_mapper.py  test_bidirectional.py  test_canonical_model.py  test_cli.py  test_closing_gaps.py  test_cloud_ops.py  test_completion.py  test_config.py  test_container.py  test_expanded_coverage.py  test_extended_assessment.py  test_final_items.py  test_final_three.py  test_flexible_parsers.py  test_infrastructure.py  test_new_engines.py  test_new_modules.py  test_terraform_state_parser.py  test_translation.py  test_v05_features.py
