[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "migration-factory"
version = "0.1.0"
description = "AI-Powered Multi-Cloud Infrastructure Migration Factory — Foundation & Ingestion Layer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Platform Engineering" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "structlog>=24.1,<25",
    "rich>=13.0,<14",
]

[project.optional-dependencies]
ai = ["httpx>=0.27"]
parsers = ["python-hcl2>=4.0", "openpyxl>=3.1"]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
    "python-hcl2>=4.0",
    "openpyxl>=3.1",
]

# ---------------------------------------------------------------------------
# Plugin registration (Plugin Manager reads these groups via importlib.metadata)
# Adding a new parser/mapper is a config change here — never a core code change.
# ---------------------------------------------------------------------------
[project.scripts]
migration-factory = "migration_factory.cli:main"

[project.entry-points."migration_factory.parsers"]
terraform_state = "migration_factory.parsers.terraform_state:TerraformStateParser"
cloudformation = "migration_factory.parsers.multi_format:CloudFormationParser"
json_inventory = "migration_factory.parsers.multi_format:JSONInventoryParser"
csv_inventory = "migration_factory.parsers.multi_format:CSVInventoryParser"
terraform_plan = "migration_factory.parsers.multi_format:TerraformPlanParser"
terraform_hcl = "migration_factory.parsers.extended:TerraformHCLParser"
terraform_log = "migration_factory.parsers.extended:TerraformLogParser"
excel_inventory = "migration_factory.parsers.extended:ExcelInventoryParser"
arm_template = "migration_factory.parsers.azure_cmdb:ARMTemplateParser"
servicenow_cmdb = "migration_factory.parsers.azure_cmdb:ServiceNowCMDBParser"

[project.entry-points."migration_factory.mappers"]
aws_to_canonical = "migration_factory.mappers.aws_to_canonical:AWSToCanonicalMapper"
gcp_to_canonical = "migration_factory.mappers.gcp_to_canonical:GCPToCanonicalMapper"
azure_to_canonical = "migration_factory.parsers.azure_cmdb:AzureToCanonicalMapper"

[tool.hatch.build.targets.wheel]
packages = ["src/migration_factory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=migration_factory --cov-report=term-missing --cov-report=xml"

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "ANN"]
# ANN401 (no `Any`) is disabled: structlog processor callbacks and the
# provider-native `native_attributes` bag are legitimately dynamically
# typed — every other module keeps `Any` out of its public signatures.
ignore = ["ANN401", "SIM102", "SIM105"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"src/migration_factory/ai/engine.py" = ["E501"]

[[tool.mypy.overrides]]
module = ["rich.*"]
ignore_missing_imports = true
