[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "migration-factory"
version = "0.1.0"
description = "AI-Powered Multi-Cloud Infrastructure Migration Factory — Foundation & Ingestion Layer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Platform Engineering" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "structlog>=24.1,<25",
    "rich>=13.0,<14",
]

[project.optional-dependencies]
ai = ["httpx>=0.27"]
parsers = ["python-hcl2>=4.0", "openpyxl>=3.1"]
api = [
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0,<3",
    "asyncpg>=0.29",
    "alembic>=1.13",
]
dev = [
    # aiosqlite: test-only, backs the API tests' hermetic in-memory DB
    # override (see tests/unit/test_api.py) — production uses asyncpg only.
    "aiosqlite>=0.20",
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
    "python-hcl2>=4.0",
    "openpyxl>=3.1",
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0,<3",
    "asyncpg>=0.29",
    "alembic>=1.13",
]

# ---------------------------------------------------------------------------
# Plugin registration (Plugin Manager reads these groups via importlib.metadata)
# Adding a new parser/mapper is a config change here — never a core code change.
# ---------------------------------------------------------------------------
[project.scripts]
migration-factory = "migration_factory.cli:main"

[project.entry-points."migration_factory.parsers"]
terraform_state = "migration_factory.parsers.terraform_state:TerraformStateParser"
cloudformation = "migration_factory.parsers.multi_format:CloudFormationParser"
json_inventory = "migration_factory.parsers.multi_format:JSONInventoryParser"
csv_inventory = "migration_factory.parsers.multi_format:CSVInventoryParser"
terraform_plan = "migration_factory.parsers.multi_format:TerraformPlanParser"
terraform_hcl = "migration_factory.parsers.extended:TerraformHCLParser"
terraform_log = "migration_factory.parsers.extended:TerraformLogParser"
excel_inventory = "migration_factory.parsers.extended:ExcelInventoryParser"
arm_template = "migration_factory.parsers.azure_cmdb:ARMTemplateParser"
servicenow_cmdb = "migration_factory.parsers.azure_cmdb:ServiceNowCMDBParser"

[project.entry-points."migration_factory.mappers"]
aws_to_canonical = "migration_factory.mappers.aws_to_canonical:AWSToCanonicalMapper"
gcp_to_canonical = "migration_factory.mappers.gcp_to_canonical:GCPToCanonicalMapper"
azure_to_canonical = "migration_factory.parsers.azure_cmdb:AzureToCanonicalMapper"

[tool.hatch.build.targets.wheel]
packages = ["src/migration_factory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=migration_factory --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
# Excluded from the coverage gate: these call real cloud SDKs (boto3,
# azure-*, google-cloud) or a PDF renderer (weasyprint/reportlab) and can't
# be meaningfully unit-tested without either live credentials or mocking
# out the entire third-party API surface. Not a proxy for "untested code is
# fine" — cli.py's low coverage, for example, is a real gap and stays counted.
omit = [
    "src/migration_factory/discovery/aws_live.py",
    "src/migration_factory/discovery/gcp_live.py",
    "src/migration_factory/discovery/azure_live.py",
    "src/migration_factory/discovery/providers/cloud.py",
    "src/migration_factory/deployment/cloud_ops.py",
    "src/migration_factory/reporting/pdf_native.py",
]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "ANN"]
# ANN401 (no `Any`) is disabled: structlog processor callbacks and the
# provider-native `native_attributes` bag are legitimately dynamically
# typed — every other module keeps `Any` out of its public signatures.
ignore = ["ANN401", "SIM102", "SIM105"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"src/migration_factory/ai/engine.py" = ["E501"]
# FastAPI's dependency-injection idiom requires `= File(...)` / `= Form(...)`
# as literal argument defaults; B008 doesn't know this pattern from a real
# mutable-default bug.
"src/migration_factory/api/main.py" = ["B008"]
# Alembic's own script.py.mako template controls this file's style
# (Union[...] typing, import layout) — not hand-authored application code,
# and every future `alembic revision --autogenerate` regenerates the same
# pattern, so fighting it per-file each time isn't worth it.
"alembic/versions/*.py" = ["UP007", "I001"]

[[tool.mypy.overrides]]
module = ["rich.*"]
ignore_missing_imports = true

# Optional live-cloud / document-generation SDKs used behind feature-gated
# code paths (discovery/*_live.py, deployment/cloud_ops.py, reporting/
# pdf_native.py). None ship inline types or a PEP 561 stub package, and none
# are installed by the `dev` extra — pre-existing gap, unrelated to FastAPI.
[[tool.mypy.overrides]]
module = [
    "hcl2",
    "openpyxl.*",
    "azure.*",
    "boto3.*",
    "google.cloud.*",
    "googleapiclient.*",
    "hvac.*",
    "weasyprint.*",
    "reportlab.*",
]
ignore_missing_imports = true
